fix: alignment of logo in all pages in media query iphone 6 landscape view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -861,7 +861,7 @@ input[type=reset]{
        margin-left: 20px !important;
        line-height: 12px;
        position: absolute;
-       top: 12px !important;
+       top: 15px !important;
        font-weight: bold;
 
        margin-top: 0px;
